Updated chart implementation to support different statistics types
Also changed some naming and type signatures, and cleaned the code
slightly.