@@ -2,9 +2,10 @@ package seedu.billboard.model.statistics;
 
 import java.time.LocalDate;
 import java.time.Period;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
+import javafx.util.Pair;
 import seedu.billboard.commons.core.date.DateInterval;
 import seedu.billboard.commons.core.date.DateRange;
 import seedu.billboard.model.expense.Amount;
@@ -23,22 +24,12 @@ public class EmptyExpenseTimeline implements ExpenseTimeline {
     }
 
     @Override
-    public DateRange getDateRange() {
-        return new DateRange(startDate, endDate);
-    }
-
-    @Override
     public DateInterval getDateInterval() {
         return DateInterval.MONTH;
     }
 
     @Override
-    public List<Amount> getTotalAmounts() {
-        return List.of(new Amount("0"));
-    }
-
-    @Override
-    public Map<DateRange, Amount> getTimeline() {
-        return Map.of(new DateRange(startDate, endDate), new Amount("0"));
+    public List<Pair<DateRange, Amount>> getTimelineValues() {
+        return Collections.singletonList(new Pair<>(new DateRange(startDate, endDate), new Amount("0")));
     }
 }
